<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFBFD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="364dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:background="#FDFCFC"
        android:text="@string/textview"
        android:textColor="@color/colorAccent"
        android:textColorLink="#393D3D"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginBottom="342dp"
        android:background="#FFFFFF"
        android:text="@string/btn1"
        android:textColor="#F05288"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="351dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="88dp"
        android:background="#FCF9F9"
        android:text="@string/btn14"
        android:textStyle="bold" />
</RelativeLayout>

